# StructIQ

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
agents/: summarizer.py
api/: models.py  rate_limiter.py  routes.py
architecture/: analyzer.py  clustering.py  domain_aggregator.py  graph_processor.py  pipeline.py  recommender.py  terraform_analyzer.py
context/: __init__.py  context_manager.py
core/: orchestrator.py  state_manager.py
dependency/: analyzer.py  extractor.py  graph_builder.py  pipeline.py  terraform_extractor.py  terraform_resource_scanner.py
examples/: report.html
generators/: json_writer.py
intelligence/: digest_builder.py  narrative_generator.py
llm/: client.py
modernization/: change_generator.py  impact_analyzer.py  pipeline.py  plan_generator.py  planner.py
reporting/: architecture_review.py  comparator.py  health_score.py  pipeline.py  report_generator.py  svg_generator.py
scanner/: content_scanner.py  file_classifier.py  file_scanner.py  module_extractor.py
scripts/: __init__.py  calibrate_scoring.py  generate_example.py
services/: cache_manager.py  override_manager.py  run_index.py  run_manager.py
static/: index.html
tests/: test_antipattern_confirmer.py  test_api_response_models.py  test_calibration_harness.py  test_change_generator.py  test_cli_exit_codes.py  test_clustering.py  test_comparator.py  test_compare_endpoint.py  test_complexity_detectors.py  test_content_scanner.py  test_cycle_classifier.py  test_planner.py  (+29 more)
(+37 files in other folders)
