[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "structiq"
version = "0.1.0"
description = "Deterministic codebase intelligence and modernization planning engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "pydantic>=2.0,<3.0",
    "openai==1.78.0",
    "anthropic>=0.49",
    "filelock==3.18.0",
    "PyYAML==6.0.2",
]

[project.scripts]
structiq = "StructIQ.main:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["StructIQ*"]

[tool.pytest.ini_options]
testpaths = ["StructIQ/tests"]
